Actions
Bug #11658
closedSome capabilities are invalid for SMB 2.002
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Uncovered by the Windows Protocol Test Suite: SMB2_GLOBAL_CAP_LEASING and SMB2_GLOBAL_CAP_LARGE_MTU and not valid for SMB 2.002 but we set them anyway.
Updated by Electric Monk about 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 700daa96bb3e99515f0abdc42f1904e78bc282da
commit 700daa96bb3e99515f0abdc42f1904e78bc282da Author: Andrew Stormont <astormont@racktopsystems.com> Date: 2019-09-30T19:51:25.000Z 11658 Some capabilities are invalid for SMB 2.002 Reviewed by: Gordon Ross <Gordon.W.Ross@gmail.com> Reviewed by: Garrett D'Amore <gdamore@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions