11658 Some capabilities are invalid for SMB 2.002 Reviewed by: Gordon Ross <Gordon.W.Ross@gmail.com> Reviewed by: Garrett D'Amore <gdamore@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>